--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "node.js": "0.0.1-security",
-    "random-puppy": "^1.1.0"
+    "random-puppy": "^1.1.0",
+    "ytdl-core": "^4.10.0"
   },
-  "devDependencies": {},
   "description": ""
 }
