--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "discord-buttons": "^4.0.0",
     "discord-tictactoe": "^2.1.1",
     "discord.js": "^12.5.3",
-    "distube": "^2.8.18",
-    "ffmpeg-static": "^4.4.0",
     "fs": "0.0.1-security",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "node.js": "0.0.1-security",
-    "random-puppy": "^1.1.0",
-    "ytdl-core": "^4.11.0"
+    "random-puppy": "^1.1.0"
   },
   "description": ""
 }
